# gaitech_edu

./: .project  CMakeLists.txt  README.md  WS_UDP_forwarder.py  package.xml  roslink-ba_websocket_server.py
src/RIA-E100/navigation/: map_navigation.cpp
src/ardrone/: ardrone_control.py  ardrone_pilot.py  drone_patrol.py
src/ardrone/states_variables/: ARdroneStateVariables.py
src/ball_tracking/: ball_follower.py  pid_class.py
src/gapter/: gapter_pilot.py  move_shapes.py  move_shapes.py~
src/laserscan/: LaserScanner.h
src/maps/: home.yaml~  psu.pgm  psu.yaml  robopark2.pgm  robopark_plan.yaml  robopark_plan.yaml~  test_map.yaml~
src/maps/stage/: home-not-working-because-gray-areay-of-image.world  maze.world~  psu.world  psu.world~  robopark.world~  robopark_plan.world  turtlebot.inc
src/object_tracking/: ball_tracking.py  pid_control.py  pid_control.py~
src/ros_basics/talker_listener/: listener.cpp
src/turtlebot/keyboard_teleop/: README.md  key_teleop.py  keyboard_teleop.cpp
src/turtlebot/keyboard_teleop/script/: keyboard_teleop.py
src/turtlebot/navigation/free_space_navigation/launch/: free_space_navigation_stage.launch  free_space_navigation_stage_python_node.launch
src/turtlebot/navigation/free_space_navigation/scripts/: free_space_navigation.py  free_space_navigation.py~
src/turtlebot/navigation/line_follower/scripts/: follower.py  follower_color_filter.py  follower_line_finder.py  follower_line_finder.py~  follower_opencv.py  line_follower.py
src/turtlebot/navigation/map_navigation/: map_navigation.cpp
src/turtlebot/navigation/map_navigation/launch/: map_navigation_stage.launch  map_navigation_stage_psu.launch  turtlebot_stage_home.launch  turtlebot_stage_maze.launch  turtlebot_stage_psu.launch  turtlebot_stage_roboparck.launch
src/turtlebot/navigation/map_navigation/scripts/: map_navigation.py  map_navigation.py~  map_navigation_old.py
src/turtlebot/navigation/reactive_navigation/: laser_stop.cpp
src/turtlebot/navigation/turtlebot_follower/: follower.cpp
src/turtlebot/navigation/turtlebot_follower/launch/: turtlebot_follower.launch  turtlebot_follower.launch~
src/turtlebot/navigation/turtlebot_follower/scripts/: follower.py  move.py  tracking.py  tracking.py~
src/turtlebot/openCV/launch/: turtlebot_openCV.launch
src/turtlebot/openCV/scripts/: turtlebot_openCV.py
src/turtlebot/voice_teleop/: voice_teleop.cpp  voice_teleop.py  voice_teleop_advanced.py
src/turtlebot/voice_teleop/config/: TAR0645.tgz  TAR3796.tgz  motion_commands.dic  motion_commands.lm  motion_commands.log_pronounce  motion_commands.sent  motion_commands.txt  motion_commands.txt~  motion_commands.vocab
src/turtlebot/voice_teleop/launch/: recognizer.launch  turtlebot_voice_teleop_advanced.launch  turtlebot_voice_teleop_gazebo.launch  turtlebot_voice_teleop_stage.launch  voice_teleop.launch
src/turtlesim/cleaning_app/: robot_cleaner.cpp
