<?xml version="1.0"?>
<package>
  <name>gaitech_edu</name>
  <version>0.0.1</version>
  <description>The gaitech_edu package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ros@todo.todo">ros</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gaitech_doc</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  
  <buildtool_depend>catkin</buildtool_depend>
 <build_depend>pocketsphinx</build_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>tf</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>sound_play</build_depend>
 <build_depend>std_msgs</build_depend>
 <run_depend>pocketsphinx</run_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>tf</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>sound_play</run_depend>
 <run_depend>std_msgs</run_depend>
  
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
